Add more videos and improve the modal layout

--- a/src/style.css
+++ b/src/style.css
@@ -26,3 +26,11 @@ video {
     width: 100%;
     height: auto;
 }
+
+.modal-main-content {
+    padding-top: 20px;
+}
+
+.modal-image {
+    padding-right: 20px;
+}
